--- a/pokimon/src/Components/style.css
+++ b/pokimon/src/Components/style.css
@@ -5,9 +5,77 @@
     font-family: 'Roboto', sans-serif;
 }
 body{
-    background-color: #FCEEC8;
+    /* background-color: #FCEEC8; */
+    background-color: black;
 }
-.container{
+/* <div
+//       style={{
+//         display: "grid",
+//         gridTemplateColumns: "80px 80px 80px 80px 80px",
+//         gap: "33px 160px",
+//         height: "630px",
+//         paddingTop: "100px",
+//         marginLeft: "80px",
+//         marginRight: "90px",
+       
+//       }}
+//     >
+//       {pokeData.map((item, i) => (
+//         <div
+//           key={i}
+//           style={{
+//             width: "220px",
+//             textAlign: "center",
+//             height: "240px",
+//             boxShadow: "rgba(0, 0, 0, 0.24) 0px 3px 8px",
+//             backgroundColor: "#9EDEF9",
+//             borderRadius: "10px",
+//             cursor: "pointer",
+//             "&:hover": {
+//               width: "200px"
+//             },
+//           }} */
+
+.pokemon-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 80px);
+    /* grid-template-columns: "80px 80px 80px 80px 80px"; */
+    gap: 33px 160px;
+    height: 630px;
+    padding-top: 100px;
+    margin-left: 80px;
+    margin-right: 90px;
+  }
+  
+  .pokemon-card {
+    width: 220px;
+    text-align: center;
+    height: 240px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: #9edef9;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: width 0.3s ease-in-out;
+  }
+  
+  .pokemon-card:hover {
+    width: 215px;
+   
+  }
+  
+  .pokemon-image {
+    width: 100%;
+    height: 170px;
+    padding-left: 10%;
+    padding-top: 15%;
+  }
+  
+  .pokemon-name {
+    font-size: 20px;
+    font-weight: bolder;
+  }
+  
+/* .container{
     width: 90%;
     margin: auto;
     padding-top: 100px;
@@ -82,4 +150,4 @@ body{
     color: white;
     background-color: #b74555;
     border-radius: 8px;
-}
+} */
