--- a/pokimon/src/Components/style.css
+++ b/pokimon/src/Components/style.css
@@ -52,7 +52,8 @@ body{
     text-align: center;
     height: 240px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    background-color: #9edef9;
+    /* background-color: #9edef9; */
+    background-color: #72cbf1;
     border-radius: 10px;
     cursor: pointer;
     transition: width 0.3s ease-in-out;
